--- a/index.html
+++ b/index.html
@@ -166,6 +166,18 @@
                         Why don't you hire me to take your business to the next level?😉 -->
                       </p>
                     </div>
+                    <ul class="info-list">
+                      <li><span class="title">Age</span><span class="age-value value"></span></li>
+                      <li><span class="title">Residence</span><span class="value">Ireland</span></li>
+                      <li><span class="title">Address</span><span class="value">Apartment 2, 88 North king Street Dublin 7 D07 X2E5</span></li>
+                      <li><span class="title">e-mail</span><span class="value"><a href="mailto:topwebfulldev@gmail.com">topwebfulldev@gmail.com</a></span></li>
+                      <li><span class="title"></span><span class="value"><a
+                            href="mailto:topwebfulldev@outlook.com">topwebfulldev@outlook.com</a></span></li>
+                      <li><span class="title">Phone</span><span class="value">+1 (470) 557 1441 <i
+                            class="fa fa-whatsapp"></i></span></li>
+                      <li><span class="title">Freelance</span><span class="value available">Full-time Available</span>
+                      </li>
+                    </ul>
                     <div class="download-resume">
                       <a href="resume.pdf" class="btn btn-secondary">Download Resume</a>
                     </div>
@@ -189,20 +201,6 @@
                     It gives me great satisfaction to see a company gain from my experience and talents. <br>
                     Your Success is My Business with pleasure! <br>
                     Why don't you hire me to take your business to the next level?😉  
-                    <!-- <ul class="info-list">
-                      <li><span class="title">Age</span><span class="age-value value"></span></li>
-                      <li><span class="title">Residence</span><span class="value">China</span></li>
-                      <li><span class="title">Address</span><span class="value">Shenyang, People's Republic of
-                          China</span></li>
-                      <li><span class="title">e-mail</span><span class="value"><a
-                            href="mailto:topwebfulldev@gmail.com">topwebfulldev@gmail.com</a></span></li>
-                      <li><span class="title"></span><span class="value"><a
-                            href="mailto:2225051390@qq.com">2225051390@qq.com</a></span></li>
-                      <li><span class="title">Phone</span><span class="value">+86 186 2408 2731 <i
-                            class="fa fa-whatsapp"></i></span></li>
-                      <li><span class="title">Freelance</span><span class="value available">Full-time Available</span>
-                      </li>
-                    </ul> -->
                   </div>
 
                 </div>
@@ -229,7 +227,7 @@
                       <div class="timeline">
                         <!-- Education 1 -->
                         <div class="timeline-item">
-                          <h4 class="item-title">Tsinghua University</h4>
+                          <h4 class="item-title">Technological University Dublin</h4>
                           <span class="item-period">Apr 2009 - Jun 2014</span>
                           <span class="item-small">General course</span>
                           <p class="item-description">Master of Science in Computer Science<br> GPA: 4.66</p>
@@ -238,7 +236,7 @@
 
                         <!-- Education 2 -->
                         <div class="timeline-item">
-                          <h4 class="item-title">Chinese Academy of Sciences</h4>
+                          <h4 class="item-title">Royal Irish Academy</h4>
                           <span class="item-period">Jun 2014 - Dec 2016</span>
                           <span class="item-small">Specialization Course</span>
                           <p class="item-description">Bachelor of Engineering in Electrical and Electronics<br> GPA: 4.3
@@ -258,7 +256,7 @@
                       <div class="timeline">
                         <!-- Experience 1 -->
                         <div class="timeline-item">
-                          <h4 class="item-title">Chinese Academy of Sciences</h4>
+                          <h4 class="item-title">Royal Irish Academy (Dublin, Ireland)</h4>
                           <span class="item-period">Apr 2014 - Aug 2017</span>
                           <span class="item-small">Software Engineer</span>
                           <p class="item-description">
@@ -266,8 +264,8 @@
                             <li>Worked as a software engineer in a large team for national tasks using Tensorflow and
                               Python.
                             </li>
-                            <li>Worked as a web developer, using php CMS frameworks (CI, Laravel, WordPress, Opencart,
-                              Prestashop, …), HTML5, CSS3 and JavaScript for medical, educational sites.</li>
+                            <li>Worked as a web developer, using php CMS frameworks (CI, Laravel, WordPress,
+                              Prestashop, …), HTML5, CSS3 and JavaScript libraries (React, D3.js, Pixi.js, ...) for medical, educational sites.</li>
                           </ul>
                           </p>
                         </div>
@@ -275,12 +273,22 @@
 
                         <!-- Experience 2 -->
                         <div class="timeline-item">
+                          <h4 class="item-title">Snowfall Company (Finland)</h4>
+                          <span class="item-period">Nov 2016 - Feb 2018</span>
+                          <span class="item-small">Python Developer(DevOps) (remote)</span>
+                          <p class="item-description">Python is all the rage in the world and its frameworks are rapidly
+                            improving and releasing. I worked as Backend developer and DevOps using Python frameworks(Flask/Django).</p>
+                        </div>
+                        <!-- / Experience 2 -->
+
+                        <!-- Experience 2 -->
+                        <div class="timeline-item">
                           <h4 class="item-title">True Prodigy (Texas, US)</h4>
                           <span class="item-period">Dec 2017 - Mar 2019</span>
                           <span class="item-small">Frontend developer (remote)</span>
-                          <p class="item-description">I started my career as a freelancer since 2015. Prodigy was one of
+                          <p class="item-description">I started my career as a freelancer since 2017. Prodigy was one of
                             my biggest clients, which I worked as frontend developer using React for.
-                            Work at Prodigy company as a Full-stack developer (MERN stack) and React-Native developer
+                            Worked at Prodigy company as a Full-stack developer (MERN stack) and React-Native developer
                             for Hybrid Mobile development. This was a big project and we were able to finish it
                             successfully.
                           </p>
@@ -290,10 +298,9 @@
                         <!-- Experience 2 -->
                         <div class="timeline-item">
                           <h4 class="item-title">Parker Lane Group (London, UK)</h4>
-                          <span class="item-period">Nov 2016 - Feb 2018</span>
-                          <span class="item-small">Python Developer(DevOps) (remote)</span>
-                          <p class="item-description">Python is all the rage in the world and its frameworks are rapidly
-                            improving and releasing. I worked as Backend developer and DevOps using Python frameworks(Flask/Django).</p>
+                          <span class="item-period">Sep 2017 - Feb 2018</span>
+                          <span class="item-small">Frontend developer</span>
+                          <p class="item-description">Parker Lane Group is a Resale as a Service (RaaS) platform. I worked as a frontend developer and was responsible for integration 3rd APIs.</p>
                         </div>
                         <!-- / Experience 2 -->
 
@@ -301,16 +308,16 @@
                         <div class="timeline-item">
                           <h4 class="item-title">Brightcast (London, UK)</h4>
                           <span class="item-period">Dec 2019 - Aug 2020</span>
-                          <span class="item-small">Full-stack developer (remote)</span>
+                          <span class="item-small">Full-stack developer</span>
                           <p class="item-description">I worked alone with their CTO and I was responsible for both
-                            frontend (Angular) and backend (ASP.NET Core), even deploying to Azure.</p>
+                            frontend (Angular) and backend (ASP.NET Core), even deploying to Azure.<br>Theo, the CTO was one of my best companions ever.</p>
                         </div>
                         <!-- / Experience 3 -->
 
                         <!-- Experience 3 -->
                         <div class="timeline-item">
                           <h4 class="item-title">TazzerClean (Rotherham, UK)</h4>
-                          <span class="item-period">Dec 2020 - Apr 2021</span>
+                          <span class="item-period">Jul 2022 - </span>
                           <span class="item-small">Project manager, DevOps</span>
                           <p class="item-description">ASP.NET Core for backend API, Vue.js for frontend. My role was to
                             assign tasks to other developers and
@@ -334,7 +341,7 @@
                       <div class="skills-info">
                         <h4>React</h4>
                         <div class="skill-container">
-                          <div class="skill-percentage skill-1"></div>
+                          <div class="skill-percentage skill-4"></div>
                         </div>
 
                         <h4>Angular</h4>
@@ -359,7 +366,7 @@
 
                         <h4>CSS3</h4>
                         <div class="skill-container">
-                          <div class="skill-percentage skill-3"></div>
+                          <div class="skill-percentage skill-4"></div>
                         </div>
                       </div>
 
@@ -391,6 +398,16 @@
                         <h4>PHP</h4>
                         <div class="skill-container">
                           <div class="skill-percentage skill-4"></div>
+                        </div>
+
+                        <h4>Java</h4>
+                        <div class="skill-container">
+                          <div class="skill-percentage skill-4"></div>
+                        </div>
+                        
+                        <h4>DBMS</h4>
+                        <div class="skill-container">
+                          <div class="skill-percentage skill-6"></div>
                         </div>
                       </div>
 
@@ -1094,7 +1111,7 @@
     <!-- /Main Content -->
   </div>
   <footer>
-    <div class="copyrights">© 2017 All rights reserved. Material template by LMPixels</div>
+    <div class="copyrights">© 2023 All rights reserved.</div>
   </footer>
 
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
