--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <ul class="info-list">
                       <li><span class="title">Age</span><span class="age-value value"></span></li>
                       <li><span class="title">Residence</span><span class="value">Ireland</span></li>
-                      <li><span class="title">Address</span><span class="value">Apartment 2, 88 North king Street Dublin 7 D07 X2E5</span></li>
+                      <li><span class="title">Address</span><span class="value">Apartment 2, 88 North king Street Dublin</span></li>
                       <li><span class="title">e-mail</span><span class="value"><a href="mailto:topwebfulldev@gmail.com">topwebfulldev@gmail.com</a></span></li>
                       <li><span class="title"></span><span class="value"><a
                             href="mailto:topwebfulldev@outlook.com">topwebfulldev@outlook.com</a></span></li>
