--- a/index.html
+++ b/index.html
@@ -1048,6 +1048,14 @@
                     </div>
                     <div class="contact-info-block">
                       <div class="ci-icon">
+                        <i class="fa fa-github"></i>
+                      </div>
+                      <div class="ci-text">
+                        <h5><a href="http://github.com/TopWebFullDev" target="_blank">TopWebFullDev</a></h5>
+                      </div>
+                    </div>
+                    <div class="contact-info-block">
+                      <div class="ci-icon">
                         <i class="fa fa-check"></i>
                       </div>
                       <div class="ci-text">
