--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                       <li><span class="title">e-mail</span><span class="value"><a href="mailto:topwebfulldev@gmail.com">topwebfulldev@gmail.com</a></span></li>
                       <li><span class="title"></span><span class="value"><a
                             href="mailto:topwebfulldev@outlook.com">topwebfulldev@outlook.com</a></span></li>
-                      <li><span class="title">Phone</span><span class="value">+1 (470) 557 1441 <i
+                      <li><span class="title">Phone</span><span class="value">+1 470 557 1441 <i
                             class="fa fa-whatsapp"></i></span></li>
                       <li><span class="title">Freelance</span><span class="value available">Full-time Available</span>
                       </li>
@@ -1043,7 +1043,7 @@
                         <i class="fa fa-phone"></i>
                       </div>
                       <div class="ci-text">
-                        <h5>+1 (470) 557 1441 (<i class="fa fa-whatsapp"></i>)</h5>
+                        <h5>+1 470 557 1441</h5>
                       </div>
                     </div>
                     <div class="contact-info-block">
