--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div class="row">
                   <div class="col-sm-4 col-md-4 col-lg-4">
                     <div class="photo">
-                      <img src="images/photo.png" alt="" loading="lazy">
+                      <img src="images/photo.jpg" alt="" loading="lazy">
                     </div>
                   </div>
 
