update social links

--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
                         </div>
                       </div>
                     </div>
-                    <!--
-                      <div class="social-links">
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-instagram"></i></a>
-                      </div>
-                      -->
+                  
+                    <div class="social-links">
+                      <a href="https://linkedin.com/in/jason-o-mellan" target="_blank"><i class="fa fa-linkedin"></i></a>
+                      <a href="http://github.com/TopWebFullDev" target="_blank"><i class="fa fa-github"></i></a>
+                      <a href="https://t.me/topdev" target="_blank"><i class="fa fa-telegram" target="_blank"></i></a>
+                    </div>
+                    
                   </div>
                 </div>
               </div>
