update social links

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                   
                     <div class="social-links">
                       <a href="https://linkedin.com/in/jason-o-mellan" target="_blank"><i class="fa fa-linkedin"></i></a>
-                      <a href="http://github.com/TopWebFullDev" target="_blank"><i class="fa fa-github"></i></a>
+                      <a href="https://github.com/TopWebFullDev" target="_blank"><i class="fa fa-github"></i></a>
                       <a href="https://t.me/topdev" target="_blank"><i class="fa fa-telegram" target="_blank"></i></a>
                     </div>
                     
@@ -1051,7 +1051,7 @@
                         <i class="fa fa-github"></i>
                       </div>
                       <div class="ci-text">
-                        <h5><a href="http://github.com/TopWebFullDev" target="_blank">TopWebFullDev</a></h5>
+                        <h5><a href="https://github.com/TopWebFullDev" target="_blank">TopWebFullDev</a></h5>
                       </div>
                     </div>
                     <div class="contact-info-block">
