--- a/index.html
+++ b/index.html
@@ -138,16 +138,14 @@
                         <h3>About <span>Me</span></h3>
                       </div>
                       <p>
-                        Hello! I am Jason, a full-stack developer focused on frontend development.
+                        Hello! I am Jason, a full-stack developer focused on frontend development.<br>
                         As a seasoned web developer, I will help you build sophisticated web apps to boost your sales
                         and cement your reputation!<br><br>
-                        Currently I am working with new AI products DALL-E2 and GPT-4 from 
-                        <a href="https://openai.com/">openai.com</a> and it attracts me day by day.<br>
-                        And I still love blockchain projects (DApp, DAO, DeFi) despite the 'crypto winter'.<br>
-                        I just came back from a long-time vacation and I am fully available now.
-
+                        I love sharing my talents and vast coding experience with foreign companies.<br>
+                        It gives me great satisfaction to see a company gain from my experience and talents. <br>
+                        Your Success is My Business with pleasure! <br>
                         <hr>
-                        <!-- *****Why ME?*****<br>
+                        *****Why ME?*****<br>
                         As my client, I will work with you to help you meet your project goals using my years of
                         experience.
                         <br>
@@ -158,14 +156,28 @@
                         * flexible for working hours and cultures🌙 <br>
                         * devoted team collaboration👨‍👦‍👦 <br>
                         * very creative and a fast learner🏃🏻‍ <br>
-                        * willing to save your time and money💲 <br>
+                        <!-- * willing to save your time and money💲 <br> -->
                         <hr>
-                        I love sharing my talents and vast coding experience with foreign companies.<br>
-                        It gives me great satisfaction to see a company gain from my experience and talents. <br>
-                        Your Success is My Business with pleasure! <br>
-                        Why don't you hire me to take your business to the next level?😉 -->
+                        
                       </p>
                     </div>
+                  </div>
+
+                  <div class="col-sm-6 col-md-6 col-lg-6">
+                    <!-- *****Why ME?*****<br>
+                    <br>
+                    I am ... <br>
+                    * full of experiences in web development🍺 <br>
+                    * good at communication👬 <br>
+                    * easy to deal with🤗 <br>
+                    * flexible for working hours and cultures🌙 <br>
+                    * devoted team collaboration👨‍👦‍👦 <br>
+                    * very creative and a fast learner🏃🏻‍ <br>
+                    <hr>
+                    I love sharing my talents and vast coding experience with foreign companies.<br>
+                    It gives me great satisfaction to see a company gain from my experience and talents. <br>
+                    Your Success is My Business with pleasure! <br>  -->
+                      
                     <ul class="info-list">
                       <li><span class="title">Age</span><span class="age-value value"></span></li>
                       <li><span class="title">Residence</span><span class="value">Ireland</span></li>
@@ -175,32 +187,18 @@
                             href="mailto:topwebfulldev@outlook.com">topwebfulldev@outlook.com</a></span></li>
                       <li><span class="title">Phone</span><span class="value">+1 470 557 1441 <i
                             class="fa fa-whatsapp"></i></span></li>
-                      <li><span class="title">Freelance</span><span class="value available">Full-time Available</span>
+                      <!-- <li><span class="title">Freelance</span><span class="value available">Full-time Available</span> -->
                       </li>
                     </ul>
                     <div class="download-resume">
                       <a href="resume.pdf" class="btn btn-secondary">Download Resume</a>
                     </div>
-                  </div>
 
-                  <div class="col-sm-6 col-md-6 col-lg-6">
-                    *****Why ME?*****<br>
-                    As my client, I will work with you to help you meet your project goals using my years of
-                    experience.
-                    <br>
-                    I am ... <br>
-                    * full of experiences in web development🍺 <br>
-                    * good at communication👬 <br>
-                    * easy to deal with🤗 <br>
-                    * flexible for working hours and cultures🌙 <br>
-                    * devoted team collaboration👨‍👦‍👦 <br>
-                    * very creative and a fast learner🏃🏻‍ <br>
-                    * willing to save your time and money💲 <br>
                     <hr>
-                    I love sharing my talents and vast coding experience with foreign companies.<br>
-                    It gives me great satisfaction to see a company gain from my experience and talents. <br>
-                    Your Success is My Business with pleasure! <br>
-                    Why don't you hire me to take your business to the next level?😉  
+                    *****Fan facts*****<br>
+                    I still love blockchain projects (DApp, DAO, DeFi) despite the 'crypto winter'.<br>
+                    And recently I am using new AI products DALL-E2 and GPT-4 from 
+                    <a href="https://openai.com/">openai.com</a> for some projects and to be sure you will love them too!<br>
                   </div>
 
                 </div>
