--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <!-- /Loading animation -->
 
   <div id="page" class="page">
+    <canvas id="canvas-interactive"></canvas>
     <!-- Header -->
     <header id="site_header" class="header mobile-menu-hide">
       <div class="header-content">
@@ -99,8 +100,7 @@
                 <div class="row">
                   <div class="col-sm-4 col-md-4 col-lg-4">
                     <div class="photo">
-                      <!-- <img src="images/photo.jpg" alt="" loading="lazy"> -->
-                      <canvas id="canvas-image-blending"></canvas>
+                      <img src="images/photo.jpg" alt="" loading="lazy">
                     </div>
                   </div>
 
